--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 		    <artifactId>spring-jdbc</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.9.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
